k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopifake-frontend-service
  namespace: shopifake-sandbox
  labels:
    app: shopifake-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: shopifake-frontend
